--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,14 @@
+<!DOCType html>
 <html>
-<head>
-<title>Hello Buddy!</title>
-</head>
-<body>
-<h1>Hai Deyyys</h1>
-</body>
+  <head>
+    <title>Tab Title 1</title>
+  </head>
+  <body>
+    <h1>Sridhar Vembu</h1>
+    <p>Sridhar Vembu (born 1968) is an Indian billionaire business magnate and the founder and CEO of Zoho Corporation.[2] According to Forbes, he is the 59th richest Indian in the world with a net worth of US$2.4 billion, as of May 2021.[3] He was awarded India's fourth highest civilian award, the Padma Shri, in 2021</p>
+    <img src="https://www.forbesindia.com/media/images/2020/Jun/img_134617_sridharvembu.jpg" height="100" width="100"></img>
+  </body>
+<footer>
+  Sridhar vembu &copy; 2021
+</footer>
 </html>
