--- a/site/index.html
+++ b/site/index.html
@@ -1,15 +1,15 @@
-<!DOCType html>
-<html>
+<!DOCType html >
+<html lang>
   <head>
-    <title>CEO</title>
+    <title>Tab Title 1</title>
   </head>
   <body>
     <h1>Sridhar Vembu</h1>
-     <img src="https://github.com/JeyaGuru/Html/raw/gh-pages/sridhar-vembu.jpg" height="350" width="350"></img>
+     <img src="https://github.com/JeyaGuru/Html/raw/gh-pages/sridhar-vembu.jpg" height="720" alt="Sridhar" width="720">
   <h3>About</h3>
-    <p>Sridhar Vembu (born 1968) is an Indian billionaire business magnate and the founder and CEO of Zoho Corporation.[2] According to Forbes, he is the 59th richest Indian in the world with a net worth of US$2.4 billion, as of May 2021.[3] He was awarded India's fourth highest civilian award, the Padma Shri, in 2021</p>  
-  </body>
-<footer>
+    <p>Sridhar Vembu (born 1968) is an Indian billionaire business magnate and the founder and CEO of Zoho Corporation.[2] According to Forbes, he is the 59th richest Indian in the world with a net worth of US$2.4 billion, as of May 2021.[3] He was awarded India's fourth highest civilian award, the Padma Shri, in 2021</p>
+   <footer>
   Sridhar Vembu &copy; 2021
 </footer>
+  </body>
 </html>
