--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCType html >
 <html lang>
   <head>
-    <title>Tab Title 1</title>
+    <title>CEO</title>
   </head>
   <body>
     <h1>Sridhar Vembu</h1>
